changed from 2 columns to 4 to avoid weird bug of clipping/misrender of black background

--- a/src/components/MintPopup.module.css
+++ b/src/components/MintPopup.module.css
@@ -191,8 +191,8 @@
   /* position: absolute;
   left: 2em;
   top: 20vh; */
-  columns: auto 2;
-  height: 22em;
+  columns: auto 4;
+  height: 10em;
   padding: 1em;
   border: 2px solid #7aacba;
   border-radius : 5px;
